--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="codigo_producto">Código producto</string>
+    <string name="agregar_producto">Agregar producto</string>
+    <string name="titulo_generico">Título Generico</string>
 </resources>
