--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="codigo_producto">Código producto</string>
     <string name="agregar_producto">Agregar producto</string>
     <string name="titulo_generico">Título Generico</string>
+    <string name="guardar">Guardar</string>
 </resources>
