--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="agregar_producto">Agregar producto</string>
     <string name="titulo_generico">Título Generico</string>
     <string name="guardar">Guardar</string>
+    <string name="tituloInventario">Inventario</string>
 </resources>
