--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="codigo_producto">Código producto</string>
     <string name="agregar_producto">Agregar producto</string>
+    <string name="detalle_producto">Detalle del producto</string>
     <string name="titulo_generico">Título Generico</string>
     <string name="guardar">Guardar</string>
     <string name="tituloInventario">Inventario</string>
